sandbox/JoltC/Functions.h

typedef struct JPC_Vec3 {
	 float x;
	float y;
	float z;
	float _w;
} JPC_Vec3;
typedef struct JPC_Quat {
	 float x;
	float y;
	float z;
	float w;
} JPC_Quat;
typedef struct JPC_Mat44 {
	 JPC_Vec4 col[3];
	JPC_Vec3 col3;
} JPC_Mat44;
	typedef JPC_Vec3 JPC_RVec3;
	typedef JPC_Mat44 JPC_RMat44;
typedef uint32_t JPC_BodyID;
typedef uint32_t JPC_SubShapeID;
typedef uint8_t JPC_BroadPhaseLayer;
	typedef uint16_t JPC_ObjectLayer;
typedef struct JPC_Body JPC_Body;
////////////////////////////////////////////////////////////////////////////////
// Shape -> RefTarget<Shape>

typedef struct JPC_Shape JPC_Shape;
////////////////////////////////////////////////////////////////////////////////
// BodyCreationSettings

typedef struct JPC_BodyCreationSettings {
	JPC_RVec3 Position;
	JPC_Quat Rotation;
	JPC_Vec3 LinearVelocity;
	JPC_Vec3 AngularVelocity;
	uint64_t UserData;
	JPC_ObjectLayer ObjectLayer;
	// CollisionGroup CollisionGroup;
	JPC_MotionType MotionType;
	JPC_AllowedDOFs AllowedDOFs;
	bool AllowDynamicOrKinematic;
	bool IsSensor;
	bool CollideKinematicVsNonDynamic;
	bool UseManifoldReduction;
	bool ApplyGyroscopicForce;
	JPC_MotionQuality MotionQuality;
	bool EnhancedInternalEdgeRemoval;
	bool AllowSleeping;
	float Friction;
	float Restitution;
	float LinearDamping;
	float AngularDamping;
	float MaxLinearVelocity;
	float MaxAngularVelocity;
	float GravityFactor;
	uint NumVelocityStepsOverride;
	uint NumPositionStepsOverride;
	JPC_OverrideMassProperties OverrideMassProperties;
	float InertiaMultiplier;

	// MassProperties MassPropertiesOverride;

	const JPC_Shape* Shape;
} JPC_BodyCreationSettings;
typedef struct JPC_BodyCreationSettings JPC_BodyCreationSettings;
extern JPC_BodyCreationSettings* JPC_BodyCreationSettings_new();
////////////////////////////////////////////////////////////////////////////////
// Body

extern JPC_BodyID JPC_Body_GetID(const JPC_Body* self);
extern JPC_BodyType JPC_Body_GetBodyType(const JPC_Body* self);
extern bool JPC_Body_IsRigidBody(const JPC_Body* self);
extern bool JPC_Body_IsSoftBody(const JPC_Body* self);
extern bool JPC_Body_IsActive(const JPC_Body* self);
extern bool JPC_Body_IsStatic(const JPC_Body* self);
extern bool JPC_Body_IsKinematic(const JPC_Body* self);
extern bool JPC_Body_IsDynamic(const JPC_Body* self);
extern bool JPC_Body_CanBeKinematicOrDynamic(const JPC_Body* self);
extern void JPC_Body_SetIsSensor(JPC_Body* self, bool inIsSensor);
extern bool JPC_Body_IsSensor(const JPC_Body* self);
extern void JPC_Body_SetCollideKinematicVsNonDynamic(JPC_Body* self, bool inCollide);
extern bool JPC_Body_GetCollideKinematicVsNonDynamic(const JPC_Body* self);
extern void JPC_Body_SetUseManifoldReduction(JPC_Body* self, bool inUseReduction);
extern bool JPC_Body_GetUseManifoldReduction(const JPC_Body* self);
extern bool JPC_Body_GetUseManifoldReductionWithBody(const JPC_Body* self, const JPC_Body* inBody2);
extern void JPC_Body_SetApplyGyroscopicForce(JPC_Body* self, bool inApply);
extern bool JPC_Body_GetApplyGyroscopicForce(const JPC_Body* self);
extern void JPC_Body_SetEnhancedInternalEdgeRemoval(JPC_Body* self, bool inApply);
extern bool JPC_Body_GetEnhancedInternalEdgeRemoval(const JPC_Body* self);
extern bool JPC_Body_GetEnhancedInternalEdgeRemovalWithBody(const JPC_Body* self, const JPC_Body* inBody2);
extern JPC_MotionType JPC_Body_GetMotionType(const JPC_Body* self);
extern void JPC_Body_SetMotionType(JPC_Body* self, JPC_MotionType inMotionType);
extern JPC_BroadPhaseLayer JPC_Body_GetBroadPhaseLayer(const JPC_Body* self);
extern JPC_ObjectLayer JPC_Body_GetObjectLayer(const JPC_Body* self);
// extern const CollisionGroup & JPC_Body_GetCollisionGroup(const JPC_Body* self);
// extern CollisionGroup & JPC_Body_GetCollisionGroup(JPC_Body* self);
// extern void JPC_Body_SetCollisionGroup(JPC_Body* self, const CollisionGroup &inGroup);

extern bool JPC_Body_GetAllowSleeping(const JPC_Body* self);
extern void JPC_Body_SetAllowSleeping(JPC_Body* self, bool inAllow);
extern void JPC_Body_ResetSleepTimer(JPC_Body* self);
extern float JPC_Body_GetFriction(const JPC_Body* self);
extern void JPC_Body_SetFriction(JPC_Body* self, float inFriction);
extern float JPC_Body_GetRestitution(const JPC_Body* self);
extern void JPC_Body_SetRestitution(JPC_Body* self, float inRestitution);
extern JPC_Vec3 JPC_Body_GetLinearVelocity(const JPC_Body* self);
extern void JPC_Body_SetLinearVelocity(JPC_Body* self, JPC_Vec3 inLinearVelocity);
extern void JPC_Body_SetLinearVelocityClamped(JPC_Body* self, JPC_Vec3 inLinearVelocity);
extern JPC_Vec3 JPC_Body_GetAngularVelocity(const JPC_Body* self);
extern void JPC_Body_SetAngularVelocity(JPC_Body* self, JPC_Vec3 inAngularVelocity);
extern void JPC_Body_SetAngularVelocityClamped(JPC_Body* self, JPC_Vec3 inAngularVelocity);
extern JPC_Vec3 JPC_Body_GetPointVelocityCOM(const JPC_Body* self, JPC_Vec3 inPointRelativeToCOM);
extern JPC_Vec3 JPC_Body_GetPointVelocity(const JPC_Body* self, JPC_RVec3 inPoint);
extern void JPC_Body_AddForce(JPC_Body* self, JPC_Vec3 inForce);
// overload of Body::AddForce
extern void JPC_Body_AddForceAtPoint(JPC_Body* self, JPC_Vec3 inForce, JPC_RVec3 inPosition);
extern void JPC_Body_AddTorque(JPC_Body* self, JPC_Vec3 inTorque);
extern JPC_Vec3 JPC_Body_GetAccumulatedForce(const JPC_Body* self);
extern JPC_Vec3 JPC_Body_GetAccumulatedTorque(const JPC_Body* self);
extern void JPC_Body_ResetForce(JPC_Body* self);
extern void JPC_Body_ResetTorque(JPC_Body* self);
extern void JPC_Body_ResetMotion(JPC_Body* self);
extern void JPC_Body_GetInverseInertia(const JPC_Body* self, JPC_Mat44* outMatrix);
extern void JPC_Body_AddImpulse(JPC_Body* self, JPC_Vec3 inImpulse);
extern void JPC_Body_AddImpulse2(JPC_Body* self, JPC_Vec3 inImpulse, JPC_RVec3 inPosition);
extern void JPC_Body_AddAngularImpulse(JPC_Body* self, JPC_Vec3 inAngularImpulse);
extern void JPC_Body_MoveKinematic(JPC_Body* self, JPC_RVec3 inTargetPosition, JPC_Quat inTargetRotation, float inDeltaTime);
extern bool JPC_Body_ApplyBuoyancyImpulse(JPC_Body* self, JPC_RVec3 inSurfacePosition, JPC_Vec3 inSurfaceNormal, float inBuoyancy, float inLinearDrag, float inAngularDrag, JPC_Vec3 inFluidVelocity, JPC_Vec3 inGravity, float inDeltaTime);
extern bool JPC_Body_IsInBroadPhase(const JPC_Body* self);
extern bool JPC_Body_IsCollisionCacheInvalid(const JPC_Body* self);
extern const JPC_Shape* JPC_Body_GetShape(const JPC_Body* self);
extern JPC_RVec3 JPC_Body_GetPosition(const JPC_Body* self);
extern JPC_Quat JPC_Body_GetRotation(const JPC_Body* self);
extern JPC_RMat44 JPC_Body_GetWorldTransform(const JPC_Body* self);
extern JPC_RVec3 JPC_Body_GetCenterOfMassPosition(const JPC_Body* self);
extern JPC_RMat44 JPC_Body_GetCenterOfMassTransform(const JPC_Body* self);
extern JPC_RMat44 JPC_Body_GetInverseCenterOfMassTransform(const JPC_Body* self);
// extern const AABox & JPC_Body_GetWorldSpaceBounds(const JPC_Body* self);
// extern const MotionProperties *JPC_Body_GetMotionProperties(const JPC_Body* self)
// extern MotionProperties * JPC_Body_GetMotionProperties(JPC_Body* self);
// extern const MotionProperties *JPC_Body_GetMotionPropertiesUnchecked(const JPC_Body* self)
// extern MotionProperties * JPC_Body_GetMotionPropertiesUnchecked(JPC_Body* self);

extern uint64_t JPC_Body_GetUserData(const JPC_Body* self);
extern void JPC_Body_SetUserData(JPC_Body* self, uint64_t inUserData);
extern JPC_Vec3 JPC_Body_GetWorldSpaceSurfaceNormal(const JPC_Body* self, JPC_SubShapeID inSubShapeID, JPC_RVec3 inPosition);
// extern TransformedShape JPC_Body_GetTransformedShape(const JPC_Body* self);
// extern BodyCreationSettings JPC_Body_GetBodyCreationSettings(const JPC_Body* self);
// extern SoftBodyCreationSettings JPC_Body_GetSoftBodyCreationSettings(const JPC_Body* self);

////////////////////////////////////////////////////////////////////////////////
// BodyLockInterface

typedef struct JPC_BodyLockInterface JPC_BodyLockInterface;
////////////////////////////////////////////////////////////////////////////////
// BodyLockRead

typedef struct JPC_BodyLockRead JPC_BodyLockRead;
extern JPC_BodyLockRead* JPC_BodyLockRead_new(const JPC_BodyLockInterface* interface, JPC_BodyID bodyID);
extern void JPC_BodyLockRead_delete(JPC_BodyLockRead* self);
extern bool JPC_BodyLockRead_Succeeded(JPC_BodyLockRead* self);
extern const JPC_Body* JPC_BodyLockRead_GetBody(JPC_BodyLockRead* self);
////////////////////////////////////////////////////////////////////////////////
// BodyLockWrite

typedef struct JPC_BodyLockWrite JPC_BodyLockWrite;
extern JPC_BodyLockWrite* JPC_BodyLockWrite_new(const JPC_BodyLockInterface* interface, JPC_BodyID bodyID);
extern void JPC_BodyLockWrite_delete(JPC_BodyLockWrite* self);
extern bool JPC_BodyLockWrite_Succeeded(JPC_BodyLockWrite* self);
extern JPC_Body* JPC_BodyLockWrite_GetBody(JPC_BodyLockWrite* self);
////////////////////////////////////////////////////////////////////////////////
// BodyLockMultiRead

typedef struct JPC_BodyLockMultiRead JPC_BodyLockMultiRead;
extern JPC_BodyLockMultiRead* JPC_BodyLockMultiRead_new(
	const JPC_BodyLockInterface* interface,
	const JPC_BodyID *inBodyIDs,
	int inNumber);
extern void JPC_BodyLockMultiRead_delete(JPC_BodyLockMultiRead* self);
extern const JPC_Body* JPC_BodyLockMultiRead_GetBody(JPC_BodyLockMultiRead* self, int inBodyIndex);
////////////////////////////////////////////////////////////////////////////////
// BodyLockMultiWrite

typedef struct JPC_BodyLockMultiWrite JPC_BodyLockMultiWrite;
extern JPC_BodyLockMultiWrite* JPC_BodyLockMultiWrite_new(
	const JPC_BodyLockInterface* interface,
	const JPC_BodyID *inBodyIDs,
	int inNumber);
extern void JPC_BodyLockMultiWrite_delete(JPC_BodyLockMultiWrite* self);
extern JPC_Body* JPC_BodyLockMultiWrite_GetBody(JPC_BodyLockMultiWrite* self, int inBodyIndex);