sandbox/JoltC/fp_jolt.pas


function JPC_BodyCreationSettings_new: PJPC_BodyCreationSettings; cdecl; external joltc;
function JPC_Body_GetID(self: PJPC_Body): TJPC_BodyID; cdecl; external joltc;
function JPC_Body_GetBodyType(self: PJPC_Body): TJPC_BodyType; cdecl; external joltc;
function JPC_Body_IsRigidBody(self: PJPC_Body): Tbool; cdecl; external joltc;
function JPC_Body_IsSoftBody(self: PJPC_Body): Tbool; cdecl; external joltc;
function JPC_Body_IsActive(self: PJPC_Body): Tbool; cdecl; external joltc;
function JPC_Body_IsStatic(self: PJPC_Body): Tbool; cdecl; external joltc;
function JPC_Body_IsKinematic(self: PJPC_Body): Tbool; cdecl; external joltc;
function JPC_Body_IsDynamic(self: PJPC_Body): Tbool; cdecl; external joltc;
function JPC_Body_CanBeKinematicOrDynamic(self: PJPC_Body): Tbool; cdecl; external joltc;
procedure JPC_Body_SetIsSensor(self: PJPC_Body; inIsSensor: Tbool); cdecl; external joltc;
function JPC_Body_IsSensor(self: PJPC_Body): Tbool; cdecl; external joltc;
procedure JPC_Body_SetCollideKinematicVsNonDynamic(self: PJPC_Body; inCollide: Tbool); cdecl; external joltc;
function JPC_Body_GetCollideKinematicVsNonDynamic(self: PJPC_Body): Tbool; cdecl; external joltc;
procedure JPC_Body_SetUseManifoldReduction(self: PJPC_Body; inUseReduction: Tbool); cdecl; external joltc;
function JPC_Body_GetUseManifoldReduction(self: PJPC_Body): Tbool; cdecl; external joltc;
function JPC_Body_GetUseManifoldReductionWithBody(self: PJPC_Body; inBody2: PJPC_Body): Tbool; cdecl; external joltc;
procedure JPC_Body_SetApplyGyroscopicForce(self: PJPC_Body; inApply: Tbool); cdecl; external joltc;
function JPC_Body_GetApplyGyroscopicForce(self: PJPC_Body): Tbool; cdecl; external joltc;
procedure JPC_Body_SetEnhancedInternalEdgeRemoval(self: PJPC_Body; inApply: Tbool); cdecl; external joltc;
function JPC_Body_GetEnhancedInternalEdgeRemoval(self: PJPC_Body): Tbool; cdecl; external joltc;
function JPC_Body_GetEnhancedInternalEdgeRemovalWithBody(self: PJPC_Body; inBody2: PJPC_Body): Tbool; cdecl; external joltc;
function JPC_Body_GetMotionType(self: PJPC_Body): TJPC_MotionType; cdecl; external joltc;
procedure JPC_Body_SetMotionType(self: PJPC_Body; inMotionType: TJPC_MotionType); cdecl; external joltc;
function JPC_Body_GetBroadPhaseLayer(self: PJPC_Body): TJPC_BroadPhaseLayer; cdecl; external joltc;
function JPC_Body_GetObjectLayer(self: PJPC_Body): TJPC_ObjectLayer; cdecl; external joltc;
function JPC_Body_GetAllowSleeping(self: PJPC_Body): Tbool; cdecl; external joltc;
procedure JPC_Body_SetAllowSleeping(self: PJPC_Body; inAllow: Tbool); cdecl; external joltc;
procedure JPC_Body_ResetSleepTimer(self: PJPC_Body); cdecl; external joltc;
function JPC_Body_GetFriction(self: PJPC_Body): single; cdecl; external joltc;
procedure JPC_Body_SetFriction(self: PJPC_Body; inFriction: single); cdecl; external joltc;
function JPC_Body_GetRestitution(self: PJPC_Body): single; cdecl; external joltc;
procedure JPC_Body_SetRestitution(self: PJPC_Body; inRestitution: single); cdecl; external joltc;
function JPC_Body_GetLinearVelocity(self: PJPC_Body): TJPC_Vec3; cdecl; external joltc;
procedure JPC_Body_SetLinearVelocity(self: PJPC_Body; inLinearVelocity: TJPC_Vec3); cdecl; external joltc;
procedure JPC_Body_SetLinearVelocityClamped(self: PJPC_Body; inLinearVelocity: TJPC_Vec3); cdecl; external joltc;
function JPC_Body_GetAngularVelocity(self: PJPC_Body): TJPC_Vec3; cdecl; external joltc;
procedure JPC_Body_SetAngularVelocity(self: PJPC_Body; inAngularVelocity: TJPC_Vec3); cdecl; external joltc;
procedure JPC_Body_SetAngularVelocityClamped(self: PJPC_Body; inAngularVelocity: TJPC_Vec3); cdecl; external joltc;
function JPC_Body_GetPointVelocityCOM(self: PJPC_Body; inPointRelativeToCOM: TJPC_Vec3): TJPC_Vec3; cdecl; external joltc;
function JPC_Body_GetPointVelocity(self: PJPC_Body; inPoint: TJPC_RVec3): TJPC_Vec3; cdecl; external joltc;
procedure JPC_Body_AddForce(self: PJPC_Body; inForce: TJPC_Vec3); cdecl; external joltc;
procedure JPC_Body_AddForceAtPoint(self: PJPC_Body; inForce: TJPC_Vec3; inPosition: TJPC_RVec3); cdecl; external joltc;
procedure JPC_Body_AddTorque(self: PJPC_Body; inTorque: TJPC_Vec3); cdecl; external joltc;
function JPC_Body_GetAccumulatedForce(self: PJPC_Body): TJPC_Vec3; cdecl; external joltc;
function JPC_Body_GetAccumulatedTorque(self: PJPC_Body): TJPC_Vec3; cdecl; external joltc;
procedure JPC_Body_ResetForce(self: PJPC_Body); cdecl; external joltc;
procedure JPC_Body_ResetTorque(self: PJPC_Body); cdecl; external joltc;
procedure JPC_Body_ResetMotion(self: PJPC_Body); cdecl; external joltc;
procedure JPC_Body_GetInverseInertia(self: PJPC_Body; outMatrix: PJPC_Mat44); cdecl; external joltc;
procedure JPC_Body_AddImpulse(self: PJPC_Body; inImpulse: TJPC_Vec3); cdecl; external joltc;
procedure JPC_Body_AddImpulse2(self: PJPC_Body; inImpulse: TJPC_Vec3; inPosition: TJPC_RVec3); cdecl; external joltc;
procedure JPC_Body_AddAngularImpulse(self: PJPC_Body; inAngularImpulse: TJPC_Vec3); cdecl; external joltc;
procedure JPC_Body_MoveKinematic(self: PJPC_Body; inTargetPosition: TJPC_RVec3; inTargetRotation: TJPC_Quat; inDeltaTime: single); cdecl; external joltc;
function JPC_Body_ApplyBuoyancyImpulse(self: PJPC_Body; inSurfacePosition: TJPC_RVec3; inSurfaceNormal: TJPC_Vec3; inBuoyancy: single; inLinearDrag: single;
  inAngularDrag: single; inFluidVelocity: TJPC_Vec3; inGravity: TJPC_Vec3; inDeltaTime: single): Tbool; cdecl; external joltc;
function JPC_Body_IsInBroadPhase(self: PJPC_Body): Tbool; cdecl; external joltc;
function JPC_Body_IsCollisionCacheInvalid(self: PJPC_Body): Tbool; cdecl; external joltc;
function JPC_Body_GetShape(self: PJPC_Body): PJPC_Shape; cdecl; external joltc;
function JPC_Body_GetPosition(self: PJPC_Body): TJPC_RVec3; cdecl; external joltc;
function JPC_Body_GetRotation(self: PJPC_Body): TJPC_Quat; cdecl; external joltc;
function JPC_Body_GetWorldTransform(self: PJPC_Body): TJPC_RMat44; cdecl; external joltc;
function JPC_Body_GetCenterOfMassPosition(self: PJPC_Body): TJPC_RVec3; cdecl; external joltc;
function JPC_Body_GetCenterOfMassTransform(self: PJPC_Body): TJPC_RMat44; cdecl; external joltc;
function JPC_Body_GetInverseCenterOfMassTransform(self: PJPC_Body): TJPC_RMat44; cdecl; external joltc;
function JPC_Body_GetUserData(self: PJPC_Body): Tuint64_t; cdecl; external joltc;
procedure JPC_Body_SetUserData(self: PJPC_Body; inUserData: Tuint64_t); cdecl; external joltc;
function JPC_Body_GetWorldSpaceSurfaceNormal(self: PJPC_Body; inSubShapeID: TJPC_SubShapeID; inPosition: TJPC_RVec3): TJPC_Vec3; cdecl; external joltc;

type
  PJPC_BodyLockInterface = type Pointer;
  PJPC_BodyLockRead = type Pointer;

function JPC_BodyLockRead_new(iface: PJPC_BodyLockInterface; bodyID: TJPC_BodyID): PJPC_BodyLockRead; cdecl; external joltc;
procedure JPC_BodyLockRead_delete(self: PJPC_BodyLockRead); cdecl; external joltc;
function JPC_BodyLockRead_Succeeded(self: PJPC_BodyLockRead): Tbool; cdecl; external joltc;
function JPC_BodyLockRead_GetBody(self: PJPC_BodyLockRead): PJPC_Body; cdecl; external joltc;

type
  PJPC_BodyLockWrite = type Pointer;

function JPC_BodyLockWrite_new(iface: PJPC_BodyLockInterface; bodyID: TJPC_BodyID): PJPC_BodyLockWrite; cdecl; external joltc;
procedure JPC_BodyLockWrite_delete(self: PJPC_BodyLockWrite); cdecl; external joltc;
function JPC_BodyLockWrite_Succeeded(self: PJPC_BodyLockWrite): Tbool; cdecl; external joltc;
function JPC_BodyLockWrite_GetBody(self: PJPC_BodyLockWrite): PJPC_Body; cdecl; external joltc;

type
  PJPC_BodyLockMultiRead = type Pointer;

function JPC_BodyLockMultiRead_new(iface: PJPC_BodyLockInterface; inBodyIDs: PJPC_BodyID; inNumber: longint): PJPC_BodyLockMultiRead; cdecl; external joltc;
procedure JPC_BodyLockMultiRead_delete(self: PJPC_BodyLockMultiRead); cdecl; external joltc;
function JPC_BodyLockMultiRead_GetBody(self: PJPC_BodyLockMultiRead; inBodyIndex: longint): PJPC_Body; cdecl; external joltc;

type
  PJPC_BodyLockMultiWrite = type Pointer;

function JPC_BodyLockMultiWrite_new(iface: PJPC_BodyLockInterface; inBodyIDs: PJPC_BodyID; inNumber: longint): PJPC_BodyLockMultiWrite; cdecl; external joltc;
procedure JPC_BodyLockMultiWrite_delete(self: PJPC_BodyLockMultiWrite); cdecl; external joltc;
function JPC_BodyLockMultiWrite_GetBody(self: PJPC_BodyLockMultiWrite; inBodyIndex: longint): PJPC_Body; cdecl; external joltc;

type
  PJPC_BodyInterface = type Pointer;
